Get rid of warning about label?

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 </head>
 <body onload=OnLoad()>
 <h1>Checksum39</h1>
-<label for="wordstart">Start of word: </label>
-<input type="text"
+<label for="wordstart">Start of word: </label><input type="text"
        id="wordstart"
        size="4"
        maxlength="4"
