Disable keyboard buttons (and grey) when no word would match

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <script src="app.js"></script>
     <script src="bip39words.js"></script>
     <script src="wordutils.js"></script>
+    <script src="disablekeys.js"><</script>
 </head>
 <body onload=OnLoad()>
 <h1>Checksum39</h1>
+
+<table>
+    <tr><td id="w0">(word1)</td>
+        <td id="w1">(word2)</td>
+        <td id="w2">(word3)</td></tr>
+    <tr><td id="w3">(word4)</td>
+        <td id="w4">(word5)</td>
+        <td id="w5">(word6)</td></tr>
+    <tr><td id="w6">(word7)</td>
+        <td id="w7">(word8)</td>
+        <td id="w8">(word9)</td></tr>
+    <tr><td id="w9">(word10)</td>
+        <td id="w10">(word11)</td>
+        <td id="w11">(word12)</td></tr>
+</table>
+
+<span class="msg">Add letters or a word:</span><br>
 <label for="prefix">Type word prefix: </label><input type="text"
        id="prefix"
        size="4"
