Add passphrase.js from github (not yet called)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <script src="app.js"></script>
     <script src="bip39words.js"></script>
     <script src="wordutils.js"></script>
-    <script src="disablekeys.js"><</script>
+    <script src="disablekeys.js"></script>
+    <script src="passphrase.js"></script>
 </head>
 <body onload=OnLoad()>
 <h1>Checksum39</h1>
