Chosen words are selectable Dynamically changing instruction message

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <td id="w11">w11</td></tr>
 </table>
 
-<span class="msg">Add letters or a word:</span><br>
+<span class="msg">
+    <!-- Instruction will go here -->
+</span><br>
 <div id="kbForWord">
     <!-- Keyboard will be rendered into here as html buttons -->
 </div>
