--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="passphrase.js"></script>
 </head>
 <body onload=OnLoad()>
-<h1>Checksum39</h1>
+<button onclick="OnLoad()">Reset</button>
 
 <table>
     <tr><td id="w0">w0</td>
